[gd_scene load_steps=3 format=3 uid="uid://dfdv27tgvc463"]

[ext_resource type="Script" uid="uid://bvoqym3ha7576" path="res://Scripts/MainMenu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://uubvvpgfs52s" path="res://Art/logo-transparent_grey_nosplash.png" id="2_853f1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 0.56, 0.56, 0.43529412)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_853f1")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -70.5
offset_right = 158.5
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CLASH!"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start the CLASH!"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CompendiumButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "How to Play"
